# LIDSOR

./: CMakeLists.txt  README.md
include/filters/: lidsor.hh
include/methods/: eva.hh  point.hh
scripts/: dirs.sh  evaluation.sh  filter.sh
src/: eva.cc
src/filters/: lidsor.cc
